# esp32-mp3-player

./: .gitignore  CMakeLists.txt  LICENSE
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  mp3_decoder.c  mp3_decoder.h  player.c  player.h  utils.c  utils.h
main/local_drivers/: i2s_output.c  i2s_output.h  id3.c  id3.h  ir_rx.c  ir_rx.h  sd_card_mount.c  sd_card_mount.h  ssd1306.c  ssd1306.h
